<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EventoFragment">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_agenda"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha1"
                android:layout_marginStart="@dimen/margin_agenda"
                android:layout_marginTop="@dimen/margin_Titulo_agenda" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_evento1"
                android:textColor="@color/orange_sena"
                android:textStyle="bold"
                android:textSize="@dimen/titulos_fragment"
                android:layout_marginStart="@dimen/margin_agenda"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:elevation="@dimen/elevationCarHome"
                android:layout_marginStart="@dimen/margin_agenda"
                android:layout_marginEnd="@dimen/margin_agenda"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_speaker"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_evento_img"
                        android:src="@drawable/evento"
                        android:contentDescription="@string/img_evento" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desc_evento1"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/desc_evento"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:elevation="@dimen/elevationCarHome"
                android:layout_marginStart="@dimen/margin_agenda"
                android:layout_marginEnd="@dimen/margin_agenda"
                android:layout_marginTop="@dimen/margin_Titulo_agenda"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_speaker">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/speaker"
                        android:textStyle="bold"
                        android:textSize="@dimen/Speaker_titulo"
                        android:textColor="@color/dark_green_sena" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        android:paddingBottom="@dimen/padding_speaker"
                        >
                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/ic_baseline_person_24"
                            android:contentDescription="@string/speaker_icon" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name_speaker1"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mas_info"
                            android:textAlignment="center"
                            android:textColor="@color/dark_green_sena" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />
        </LinearLayout>
    </ScrollView>

</FrameLayout>