<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="10dp"
    android:elevation="@dimen/elevationCarHome"
    android:layout_marginStart="@dimen/margin_agenda"
    android:layout_marginEnd="@dimen/margin_agenda"
    android:layout_marginTop="@dimen/margin_Titulo_agenda"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_items"
        >
        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/tam_img_speaker_list"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_person_24"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/speaker_icon" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_speaker1"
            android:textAlignment="center"
            android:textSize="@dimen/tam_nombre_speaker_item"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mas_info"
            android:textAlignment="center"
            android:textColor="@color/dark_green_sena" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
