<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CommentsFragment">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_agenda"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comentarios_titulo"
                android:textColor="@color/orange_sena"
                android:textStyle="bold"
                android:textSize="@dimen/titulos_fragment"
                android:layout_marginStart="@dimen/margin_agenda"
                android:layout_marginTop="@dimen/margin_Titulo_agenda"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_comentarios"
                android:textSize="@dimen/tam_desc_comentarios"
                android:layout_marginStart="@dimen/margin_agenda"/>
            <androidx.fragment.app.FragmentContainerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_comments_list"
                android:layout_marginHorizontal="@dimen/margin_home"
                android:id="@+id/comments_list"
                android:tag="comments_recycler"
                android:name="com.example.new_app.ui.CommentsListFragment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agregar_comentario"
                android:layout_marginStart="@dimen/margin_agenda"
                android:layout_marginTop="@dimen/margin_agenda"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:background="@color/cardview_dark_background"
                    android:alpha="0.2"
                    android:layout_marginStart="@dimen/margin_agenda"
                    android:layout_weight="6"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_account_circle_24"
                        android:contentDescription="@string/speaker_icon" />
                </LinearLayout>
            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agregar_btn"
                android:layout_margin="@dimen/margin_Titulo_agenda" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>