<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:elevation="@dimen/elevationCarHome"
    android:layout_marginStart="@dimen/margin_agenda"
    android:layout_marginEnd="@dimen/margin_agenda"
    android:layout_marginTop="@dimen/margin_Titulo_agenda"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_items"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                tools:ignore="NestedWeights">
                <TextView
                    android:id="@+id/hora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hora_evento"
                    android:textSize="@dimen/tam_hora_item_evento"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                     />
                <TextView
                    android:id="@+id/am_pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/am"
                    android:textSize="@dimen/tam_hora_item_evento"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/dark_green_sena"
                android:layout_weight="0.4"/>
            <TextView
                android:id="@+id/fecha_evento"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/fecha1"
                android:textSize="@dimen/titulo_evento"
                android:textAlignment="center"
                android:layout_weight="4"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/dark_green_sena"
            android:layout_weight="0.03"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_evento1"
                android:textStyle="bold"
                android:textSize="@dimen/titulo_evento"
                android:layout_marginStart="@dimen/margin_agenda" />
            <TextView
                android:id="@+id/desc_evento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_fecha"
                android:layout_marginStart="@dimen/margin_agenda" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
