<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="40dp"
    android:paddingHorizontal="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.EventoDetalleFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/tbConfDets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/hight_banner">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/banner_evento"
                android:scaleType="centerCrop"
                android:src="@drawable/banner_evento" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:background="@color/dark_gray" />

            <TextView
                android:id="@+id/tvConfTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/titulo_evento1"
                android:textColor="@color/white"
                android:textSize="@dimen/tit_evento_banner"
                android:textStyle="bold" />

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_home"
                    android:elevation="@dimen/elevationCarHome"
                    app:cardCornerRadius="@dimen/cornerCardHome">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape_items"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvConfDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fecha1"
                            android:textAlignment="center"
                            android:textSize="@dimen/tam_dets_evento" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center_horizontal">
                            <TextView
                                android:id="@+id/tvConfTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hora_evento"
                                android:textAlignment="center"
                                android:textSize="@dimen/tam_dets_evento" />
                            <TextView
                                android:id="@+id/tvConfAmPm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="am"
                                android:textAlignment="center"
                                android:textSize="@dimen/tam_dets_evento" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvConfSpeakerName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nombre_del_expositor"
                            android:textAlignment="center"
                            android:textSize="@dimen/tam_nombre_expositor"
                            android:textStyle="bold" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_margin="@dimen/margin_home"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/tags"
                                android:textAlignment="textEnd"
                                android:textSize="@dimen/tam_dets_evento"
                                android:layout_weight="1"
                                android:layout_marginEnd="8dp"/>
                            <TextView
                                android:id="@+id/tvConfTags"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/tags"
                                android:textAlignment="textStart"
                                android:textSize="@dimen/tam_dets_evento"
                                android:layout_weight="1"/>
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_evento"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvConfDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/desc_evento1"
                            android:textAlignment="center"
                            android:textSize="@dimen/tam_dets_evento" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_home">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_items"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ubicacion_evento_detalle"
                            android:textAlignment="center"
                            android:textSize="@dimen/tam_nombre_expositor"
                            android:textStyle="bold" />

                        <com.google.android.gms.maps.MapView
                            android:id="@+id/mapview"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

</FrameLayout>